v2 of dnd front

--- a/src/Style/actives.scss
+++ b/src/Style/actives.scss
@@ -24,7 +24,8 @@ button {
   }
 
   &.primary {
-    background: linear-gradient(30deg, $main-color-light, $main-color-dark);
+    background: linear-gradient(30deg, $main-color-light, $main-color-dark) 5% 20%;
+    background-size: 120% 120%;
     color: white;
   }
 
@@ -89,6 +90,10 @@ input[type='range'] {
   padding: 0;
   height: 30px;
   min-width: 300px;
+}
+
+textarea {
+  font-size: 16px !important;
 }
 
 .range-input {
