--- a/src/Style/new-cards.scss
+++ b/src/Style/new-cards.scss
@@ -25,6 +25,7 @@
     width: 50%;
     align-self: center;
   }
+
   > div {
     display: flex;
     justify-content: space-evenly;
@@ -33,6 +34,36 @@
 }
 
 .erasing {
-    color: gray;
-    background-color: gray;
+  color: gray;
+  background-color: gray;
+}
+
+.edit-char-info {
+  > .edit-char-field {
+    display: flex;
+    align-items: center;
+
+    > div {
+      flex: 1;
+    }
+
+    > input {
+      flex: 2;
+    }
+  }
+
+  > .edit-char-stats {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+
+  > :last-child {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 }
