--- a/src/Style/app-cards.scss
+++ b/src/Style/app-cards.scss
@@ -188,22 +188,30 @@
 
 .quest-card {
   @extend .item-card;
-  min-height: calc(var(--textAreaHeight) + 160px);
-  height: calc(var(--textAreaHeight) + 160px);
+  min-height: calc(var(--textAreaHeight) + 190px);
+  height: calc(var(--textAreaHeight) + 190px);
 
   h1 {
     width: 100%;
     font-weight: normal;
     text-align: left;
   }
+
   h2 {
     margin-bottom: 10px;
   }
+
   > div {
     min-height: calc(var(--itemDataHeight));
     height: calc(var(--itemDataHeight));
     white-space: pre-wrap;
     font-size: 16px;
     font-family: monospace;
+  }
+
+  > :last-child {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
   }
 }
