--- a/src/Style/new-cards.scss
+++ b/src/Style/new-cards.scss
@@ -1,5 +1,5 @@
 
-.new-note-card, .new-item-card, .new-spell-card {
+.new-note-card, .new-item-card, .new-spell-card, .new-quest-card {
   width: 100%;
   padding: 5px;
   box-sizing: border-box;
@@ -13,7 +13,7 @@
 .new-note-card {
 }
 
-.new-item-card, .new-spell-card {
+.new-item-card, .new-spell-card, .new-quest-card {
   flex-direction: column;
 
   > textarea {
@@ -26,7 +26,7 @@
     align-self: center;
   }
 
-  > div {
+  > :last-child {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -65,5 +65,44 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+  }
+}
+
+.new-quest-card {
+  > .objective-list {
+    align-self: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 95%;
+
+    > h2 {
+      width: 100%;
+      text-align: center;
+    }
+
+    > .edit-objective, .add-objective {
+      background-color: #ffffff50;
+      border-radius: 5px;
+      padding: 10px;
+      margin: 10px;
+      display: flex;
+      flex-direction: column;
+
+      > :first-child {
+        display: flex;
+        justify-content: space-evenly;
+
+        > input {
+          width: 40px;
+        }
+      }
+
+      > :last-child {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        align-self: center;
+      }
+    }
   }
 }
